Add voice-enabled MCP demo and internal persistence

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,9 @@ ODOO_DB=your_database_name
 ODOO_USERNAME=your_odoo_user
 ODOO_PASSWORD=your_odoo_password
 
+# OpenAI Configuration for Voice Processing
+OPENAI_API_KEY=sk-your-openai-api-key-here
+
 # Configuración de ERP genérico
 ERP_API_URL=https://your-erp-api.com
 ERP_API_KEY=your_api_key
