--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,15 @@ python-dotenv==1.0.0
 # Data validation and serialization
 pydantic==2.5.0
 
-# Optional: For enhanced logging and monitoring
+# File upload support
 python-multipart==0.0.6
+
+# Voice processing dependencies
+openai==1.3.0
+pydub==0.25.1
+
+# AI and ML dependencies
+numpy==1.24.3
 
 # Optional: For testing (uncomment when needed)
 # pytest==7.4.3
