--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,10 @@ pydub==0.25.1
 # AI and ML dependencies
 numpy==1.24.3
 
+# PDF parsing
+pdfplumber==0.11.7
+pymupdf==1.26.4
+
 # Optional: For testing (uncomment when needed)
 # pytest==7.4.3
 # httpx==0.25.2
